--- a/toDay/package.json
+++ b/toDay/package.json
@@ -36,12 +36,15 @@
     "react-calendar": "^5.1.0",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-calendars": "^1.1307.0",
+    "react-native-flipper": "^0.273.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "rn-flipper-async-storage-advanced": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
