--- a/toDay/package.json
+++ b/toDay/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-calendars": "^1.1307.0",
+    "react-native-draggable-flatlist": "^4.0.2",
     "react-native-flipper": "^0.273.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
