--- a/toDay/package.json
+++ b/toDay/package.json
@@ -41,6 +41,7 @@
     "react-native-flipper": "^0.273.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
+    "react-native-reorderable-list": "^0.14.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.11.2",
