--- a/toDay/package.json
+++ b/toDay/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.4.1",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.11",
@@ -23,7 +24,7 @@
     "expo-blur": "~14.1.4",
     "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.5",
-    "expo-font": "~13.3.0",
+    "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.4",
@@ -35,7 +36,7 @@
     "npm-check-updates": "^18.0.1",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.0",
     "react-native-draggable-flatlist": "^4.0.2",
