--- a/toDay/package.json
+++ b/toDay/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.4.1",
     "@expo/vector-icons": "^14.1.0",
+    "@good-react-native/gradient-border": "^1.0.2",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.11",
     "@react-navigation/native": "^7.1.7",
     "expo": "^53.0.5",
@@ -43,6 +45,7 @@
     "react-native-draggable-flatlist": "^4.0.2",
     "react-native-flipper": "^0.273.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.17.5",
     "react-native-renderer": "^15.5.3",
     "react-native-reorderable-list": "^0.14.0",
