--- a/toDay/app.json
+++ b/toDay/app.json
@@ -20,13 +20,21 @@
         "expo-font",
         {
           "fonts": [
-              "node_modules/@expo-google-fonts/montserrat/400Regular/Montserrat_400Regular.ttf"
+            "node_modules/@expo-google-fonts/montserrat/400Regular/Montserrat_400Regular.ttf"
           ]
         }
       ]
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "5230b98b-2e5f-4274-b519-70f892e1a522"
+      }
+    },
+    "android": {
+      "package": "com.sincerityegbu.toDay"
     }
   }
 }
