--- a/toDay/package.json
+++ b/toDay/package.json
@@ -17,8 +17,7 @@
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.4.1",
     "@expo/vector-icons": "^14.1.0",
-    "@good-react-native/gradient-border": "^1.0.2",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.11",
     "@react-navigation/native": "^7.1.7",
@@ -37,17 +36,16 @@
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
     "npm-check-updates": "^18.0.1",
-    "react": "^19.0.0",
+    "react": "18.2.0",
     "react-calendar": "^5.1.0",
-    "react-dom": "^19.1.0",
-    "react-native": "0.79.2",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.3",
     "react-native-calendars": "^1.1312.0",
     "react-native-draggable-flatlist": "^4.0.2",
     "react-native-flipper": "^0.273.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.17.5",
-    "react-native-renderer": "^15.3.2",
     "react-native-reorderable-list": "^0.14.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
@@ -61,12 +59,12 @@
     "@babel/core": "^7.27.1",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.14",
-    "@types/react": "~19.0.10",
-    "@types/react-test-renderer": "^19.1.0",
+    "@types/react": "^18.2.0",
+    "@types/react-test-renderer": "^18.2.0",
     "jest": "^29.7.0",
     "jest-expo": "~53.0.3",
     "metro": "^0.82.2",
-    "react-test-renderer": "19.1.0",
+    "react-test-renderer": "18.2.0",
     "typescript": "^5.8.3"
   },
   "private": true
